--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,3 +25,24 @@
 // Подключение стилей отдельных блоков и секций =======================================================================================================================
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/b-container';
+@import 'layout/b-city';
+@import 'layout/b-menu';
+@import 'layout/b-login';
+@import 'layout/b-button';
+@import 'layout/b-input';
+@import 'layout/b-search-form';
+@import 'layout/b-logo';
+@import 'layout/b-cart';
+@import 'layout/b-callback';
+@import 'layout/b-application';
+@import 'layout/b-main-content';
+@import 'layout/b-sidebar';
+@import 'layout/b-title';
+@import 'layout/b-order';
+@import 'layout/b-main';
+@import 'layout/b-new-order';
+@import 'layout/b-progress-bar';
+@import 'layout/b-old-order';
+@import 'layout/b-count';
+@import 'layout/b-section';
