--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -3,7 +3,6 @@
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  color: $fontColor;
 }
 
 *:before, *:after {
@@ -25,8 +24,8 @@ nav,footer,header,aside {
 html,body {
 	width: 100%;
   height: 100%;
-	font-size: $fontSize;
-  font-family: $mainFontFamily;
+	font-size: 16px;
+  font-family: Inter;
   font-weight: 400;
 	line-height: 1;
 }
