--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,13 +1,73 @@
-.footer {
-  padding: rem(20) 0;
-  background: $blackColor;
-  // .footer__container
-  &__container {
-    display: flex;
-    align-items: center;
-    @include media(510) {
-      flex-direction: column;
-      align-items: flex-start;
+.b-footer {
+    background: #FBFBFB;
+    padding-top: 47px;
+    &__top {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-bottom: 67px;
     }
-  }
+
+    &__bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-bottom: 29px;
+    }
+
+    &__policy,
+    &__user {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #888888;
+        margin-right: 24px;
+
+    }
+
+    &__copyright {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #888888;
+        opacity: 0.5;
+    }
+
+    .b-menu {
+        margin-right: 65px;
+        &__item-title {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 22px;
+            color: #000000;
+            margin-bottom: 34px;
+        }
+
+        &__link {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            color: #888888;
+
+            &--green {
+                color:#21A038;
+            }
+        }
+
+        &__item {
+            &:not(:last-child) {
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    &__top-wrap {
+        display: flex;
+        & .b-menu {
+            &:nth-child(2) {
+                padding-top:57px;
+
+            }
+        }
+    }
 }
