--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,62 +1,44 @@
-// =====================================================================================================================
-.header {
-  width: 100%;
-  // .header__container
-  &__container {
-    height: rem($headerHeight);
-    display: flex;
-    align-items: center;
-  }
-}
-// =====================================================================================================================
+.b-header {
+    padding: 18px 0;
+    &__top {
+        padding: 0 0 18px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
-// Burger
-/*
-.icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
-		position: relative;
-		width: rem(30);
-		height: rem(18);
-		cursor: pointer;
-		z-index: 5;
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 300ms ease 0ms;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: rem(2);
-			background-color: #000;
-		}
-		&::before {
-			top: 0;
-		}
-		&::after {
-			bottom: 0;
-		}
-		span {
-			top: calc(50% - rem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
-			&::before,
-			&::after {
-			}
-			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
-			}
-			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
-			}
-		}
-	}
+    &__wrapper {
+        margin-left: auto;
+        display: flex;
+        flex-direction: row;
+    }
+
+    &__phone {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        color: #000;
+        margin-right: 22px;
+    }
+
+    &__phone-text {
+        display: block;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+        color: #000;
+        opacity: 0.5;
+    }
+
+    &__bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .b-menu {
+        &__item {
+            margin-right: 24px;
+        }
+    }
 }
-*/
